--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,3 +6,14 @@
 .page-content {
     background-color: white;
 }
+
+#plot {
+    width: 340px;
+    float: right;
+}
+
+.profile {
+    width: 150px;
+    border-radius: 50%;
+    padding: 15px;
+}
