--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,6 +14,14 @@
 
 .profile {
     width: 150px;
+    padding: 13px;
+    float: left;
+}
+
+.profile-img {
     border-radius: 50%;
-    padding: 15px;
+}
+
+figcaption {
+    text-align: center;
 }
