--- a/_includes/image.html
+++ b/_includes/image.html
@@ -2,8 +2,10 @@
 {% for author in site.authors %}
 <div class="profile">
 <figure>
+    <a href="{{author.webpage}}">
     <img src="/assets/img/{{ author.image }}" alt="{{ author.name }}" class="profile-img">
     <figcaption>{{ author.name }}</figcaption>
+    </a>
 </figure>
 </div>
 {% endfor %}
